--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+	<title>Update User</title>
 </head>
 <body>
-
+	<section>
+		<form th:action="@{/user/add}" th:object="${user}" method="post">
+			<div>
+				<div>
+					<label>ID</label>
+					<span th:text="${user.username}"></span>
+				</div>
+				<div>
+					<label for="username">Username</label>
+					<input type="text" th:field="*{username}" />
+					<div th:errors="*{username}"></div>
+				</div>
+				<div>
+					<label for="rawPassword">Password</label>
+					<input type="password" th:field="*{rawPassword}" />
+					<div th:errors="*{rawPassword}"></div>
+				</div>
+			</div>
+			<div>
+				<div>
+					<input type="submit" value="Submit" />
+				</div>
+			</div>
+		</form>
+	</section>
 </body>
 </html>
